k8s_docker_mastery/labs/day04/manifests/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service-headless
  namespace: orderflow
  labels:
    app: payment-service
    app.kubernetes.io/part-of: orderflow
spec:
  # clusterIP: None turns this into a Headless Service.
  # CoreDNS will create direct A records for all matching Ready Pod IPs.
  # No ClusterIP virtual IP or iptables DNAT rules are allocated!
  clusterIP: None
  selector:
    app: payment-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
